# internals/domains/models/examples/fail_response.go
@@ -1,0 +1,5 @@
+package examples
+
+type FailedCommonResponse struct {
+	Status FailedStatusMessage `json:"status"`
+}
